--- a/CacelApp/Views/MainWindow.xaml
+++ b/CacelApp/Views/MainWindow.xaml
@@ -15,6 +15,8 @@
         FontFamily="{DynamicResource MaterialDesignFont}">
 
     <Window.Resources>
+        <converters:EnvironmentBadgeColorConverter x:Key="EnvironmentBadgeColorConverter"/>
+        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
         <Style x:Key="NavListBoxItemStyle" TargetType="ListBoxItem">
             <Setter Property="Padding" Value="20,12"/>
             <Setter Property="Margin" Value="0"/>
@@ -91,13 +93,27 @@
 
                         <ListBox.ItemTemplate>
                             <DataTemplate>
-                                <Grid HorizontalAlignment="Stretch">
+                                <Grid HorizontalAlignment="Left">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
                                     <materialDesign:PackIcon Kind="{Binding IconKind}" Width="20" Height="20" VerticalAlignment="Center" />
-                                    <TextBlock Grid.Column="1" Text="{Binding Text}" Margin="12,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                                    <TextBlock Grid.Column="1" Text="{Binding Text}" Margin="12,0,8,0" VerticalAlignment="Center"/>
+
+                                    <!-- Badge DEV/PROD -->
+                                    <Border Grid.Column="2" 
+                                            Background="{Binding Badge, Converter={StaticResource EnvironmentBadgeColorConverter}}"
+                                            CornerRadius="3" 
+                                            Padding="5,2"
+                                            VerticalAlignment="Center"
+                                            Visibility="{Binding Badge, Converter={StaticResource NullToVisibilityConverter}}">
+                                                                <TextBlock Text="{Binding Badge}" 
+                                                   FontSize="9" 
+                                                   FontWeight="Bold" 
+                                                   Foreground="White"/>
+                                    </Border>
                                 </Grid>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
